--- a/Android/SailorAid/app/src/main/res/layout/connect_activity.xml
+++ b/Android/SailorAid/app/src/main/res/layout/connect_activity.xml
@@ -66,12 +66,24 @@
     <TextView
         android:id="@+id/uuidText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
         android:textSize="8pt"/>
 
-    <TextView
-        android:id="@+id/chatData"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="8pt"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/charName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12pt"/>
+        <TextView
+            android:id="@+id/chatData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12pt"/>
+    </LinearLayout>
+
 </LinearLayout>
