--- a/Android/SailorAid/app/src/main/res/layout/connect_activity.xml
+++ b/Android/SailorAid/app/src/main/res/layout/connect_activity.xml
@@ -86,4 +86,21 @@
             android:textSize="12pt"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/charNameAcc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12pt"/>
+        <TextView
+            android:id="@+id/chatDataAcc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12pt"/>
+    </LinearLayout>
+
 </LinearLayout>
