--- a/Android/version_2/SailorAid/app/src/main/res/layout/activity_main.xml
+++ b/Android/version_2/SailorAid/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/boat"
+        android:layout_margin="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
