--- a/Android/version_2/SailorAid/app/src/main/res/layout/history_activity.xml
+++ b/Android/version_2/SailorAid/app/src/main/res/layout/history_activity.xml
@@ -34,6 +34,7 @@
         android:text="Are you a happy sailor?"
         android:textColor="@color/darkblue"
         android:textSize="12pt"
+        android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -173,7 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:textSize="16pt"
+        android:textSize="10pt"
         app:layout_constraintLeft_toRightOf="@id/maxIncText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -184,20 +185,21 @@
         android:background="@drawable/maplog"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="2dp"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sailorScoreText"
-        app:layout_constraintTop_toBottomOf="@id/avgPressureHolder"
+        app:layout_constraintTop_toBottomOf="@id/historyMainText"
         android:text="MAPLOG"/>
     <Button
         android:id="@+id/graphLogBtn"
         android:background="@drawable/graph"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintLeft_toRightOf="@id/mapLogBtn"
+        android:layout_margin="2dp"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/sailorScoreText"
-        app:layout_constraintTop_toBottomOf="@id/avgPressureHolder"
+        app:layout_constraintTop_toBottomOf="@id/mapLogBtn"
         android:text="Graphs"/>
 
 
