Log real sensor values

--- a/Android/version_2/SailorAid/app/src/main/res/layout/history_activity.xml
+++ b/Android/version_2/SailorAid/app/src/main/res/layout/history_activity.xml
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/maxIncText"
-        android:text="Max Incline: "/>
+        android:text="Max Drift: "/>
     <TextView
         android:id="@+id/maxDriftHolder"
         android:layout_width="wrap_content"
