--- a/Android/version_3/SailorAid/app/src/main/res/layout/graph_activity.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/layout/graph_activity.xml
@@ -44,6 +44,11 @@
                 android:layout_height="200dip"
                 app:layout_constraintTop_toBottomOf="@id/graph_sog"
                 android:id="@+id/graph_compass" />
+            <com.jjoe64.graphview.GraphView
+                android:layout_width="match_parent"
+                android:layout_height="200dip"
+                app:layout_constraintTop_toBottomOf="@id/graph_compass"
+                android:id="@+id/graph_drift" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
