--- a/Android/version_3/SailorAid/app/src/main/res/layout/activity_main.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:id="@+id/main_connection_holder"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
