--- a/Android/version_3/SailorAid/app/src/main/res/values/colors.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="laserblue">#2ECCFA</color>
     <color name="darkblue">#2E64FE</color>
     <color name="green">#00ff00</color>
+    <color name="darkgreen">#009900</color>
     <color name="red">#ff0000</color>
     <color name="blue">#0066ff</color>
     <color name="orange">#ff9933</color>
