--- a/Android/version_3/SailorAid/app/src/main/res/menu/map_menu.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/menu/map_menu.xml
@@ -7,31 +7,51 @@
     <item
         android:id="@+id/dist_left"
         android:title="Total Distance"
+        android:visible="false"
+        app:showAsAction="always|withText" />
+
+    <item
+        android:id="@+id/dist_tot"
+        android:title="Total Distance"
+        android:visible="false"
         app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/dist_to_waypoint"
         android:title="Distance"
+        android:visible="false"
         app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/create_route"
-        android:icon="@drawable/waypoints"
         android:title="Waypoints"
         android:visible="true"
-        app:showAsAction="always"/>
+        app:showAsAction="withText"/>
 
     <item
-        android:id="@+id/finnish_route"
-        android:icon="@drawable/waypoints"
-        android:title="Waypoints"
+        android:id="@+id/finish_route"
+        android:title="Finished wping"
         android:visible="false"
-        app:showAsAction="always"/>
+        app:showAsAction="withText"/>
 
     <item
         android:id="@+id/remove_waypoint"
         android:title="Remove Waypoints"
         android:visible="true"
-        app:showAsAction="never"/>
+        app:showAsAction="withText"/>
+
+    <item
+        android:id="@+id/finished_remove_waypoint"
+        android:title="Remove finished"
+        android:visible="false"
+        app:showAsAction="withText"/>
+
+    <item
+        android:id="@+id/auto_zoom"
+        android:title="Auto zoom"
+        android:checkable="true"
+        android:checked="true"
+        android:visible="true"
+        app:showAsAction="withText"/>
 
 </menu>
