--- a/Android/version_3/SailorAid/app/src/main/res/values/colors.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/values/colors.xml
@@ -11,5 +11,8 @@
     <color name="blue">#0066ff</color>
     <color name="orange">#ff9933</color>
     <color name="pico">#084B8A</color>
+    <color name="purple">#9933ff</color>
+    <color name="yellow">#ffff00</color>
     <color name="background">#EFF2FB</color>
+    <color name="transparent">#00000000</color>
 </resources>
