--- a/Android/version_3/SailorAid/app/src/main/res/menu/graph_menu.xml
+++ b/Android/version_3/SailorAid/app/src/main/res/menu/graph_menu.xml
@@ -63,4 +63,10 @@
         android:checkable="true"
         app:showAsAction="withText" />
 
+    <item android:id="@+id/range_enable"
+        android:title="Range"
+        android:visible="true"
+        android:checkable="true"
+        app:showAsAction="withText" />
+
 </menu>
